--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <li class="mine"><a href="#tabs-production" title="">Workers  (<span data-bind="text: '+' + gameFormatNumber(factorySodPerSecond())+ '/s'"></span>)</a></li>
             <li class="army" data-bind="css: { battle: inBattle}"><a href="#tabs-barracks" title="">Soldiers (<span data-bind="text: armyMound().length"></span>/<span data-bind="text: maxArmyMoundSize()"></span>)</a></li>
             <li class="achievement"><a href="#tabs-achievements" title="">Achievements (<span data-bind="text: achievementsUnlocked()"></span>/<span data-bind="text: achievements().length"></span>)</a></li>
+            <li class="evolution" data-bind="visible: totalEvolutions() > 0 || canEvolve()"><a href="#tabs-evolution" title="">Evolution (<span data-bind="text: evolutionPoints()"></span> EP)</a></li>
+            <li class="research" data-bind="visible: researchPoints() > 0 || totalEvolutions() > 0"><a href="#tabs-research" title="">Research (<span data-bind="text: researchPoints()"></span> RP)</a></li>
+            <li class="resources" data-bind="visible: nectar() > 0 || silk() > 0 || chitin() > 0 || pollen() > 0"><a href="#tabs-resources" title="">Resources</a></li>
             <li><a href="#tabs-information" title="">How To Play</a></li>
         </ul>
 
@@ -533,6 +536,102 @@
                     </tr>
                 </table>
             </div>
+            <div id="tabs-evolution" class="tab" style="display:none">
+                <table cellspacing="10">
+                    <tr>
+                        <td style="width: 100%; padding: 5px; vertical-align: top;">
+                            <h4>Evolution System</h4>
+                            <div data-bind="visible: canEvolve()">
+                                <h3>Ready to Evolve!</h3>
+                                <p>You have reached Generation <span data-bind="text: generations()"></span> and accumulated <span data-bind="text: gameFormatNumber(sodRaw())"></span> Sod.</p>
+                                <p>Evolving will reset your progress but grant <span data-bind="text: evolutionPointsGain()"></span> Evolution Points for permanent bonuses.</p>
+                                <button onclick="game.performEvolution()" class="war unlocked">EVOLVE</button>
+                            </div>
+                            <div data-bind="visible: !canEvolve()">
+                                <p>Reach Generation 50 and 1,000,000 Sod to unlock Evolution.</p>
+                                <p>Current: Generation <span data-bind="text: generations()"></span>, <span data-bind="text: gameFormatNumber(sodRaw())"></span> Sod</p>
+                            </div>
+                            <div data-bind="visible: evolutionPoints() > 0">
+                                <h4>Evolution Points: <span data-bind="text: evolutionPoints()"></span></h4>
+                                <h5>Available Bonuses:</h5>
+                                <div style="margin: 10px 0;">
+                                    <button onclick="game.purchaseEvolutionBonus('trait_multiplier', 10)" data-bind="disable: evolutionPoints() < 10">Trait Multiplier (+5%) - 10 EP</button>
+                                    <button onclick="game.purchaseEvolutionBonus('breeding_speed', 15)" data-bind="disable: evolutionPoints() < 15">Breeding Speed (+20%) - 15 EP</button>
+                                    <button onclick="game.purchaseEvolutionBonus('starting_sod', 20)" data-bind="disable: evolutionPoints() < 20">Starting Sod (+1000) - 20 EP</button>
+                                </div>
+                                <div style="margin: 10px 0;">
+                                    <h5>Species Unlocks:</h5>
+                                    <button onclick="game.purchaseEvolutionBonus('beetle_unlock', 25)" data-bind="disable: evolutionPoints() < 25 || hasEvolutionBonus('beetle_unlock')">Unlock Beetles - 25 EP</button>
+                                    <button onclick="game.purchaseEvolutionBonus('spider_unlock', 30)" data-bind="disable: evolutionPoints() < 30 || hasEvolutionBonus('spider_unlock')">Unlock Spiders - 30 EP</button>
+                                    <button onclick="game.purchaseEvolutionBonus('mantis_unlock', 35)" data-bind="disable: evolutionPoints() < 35 || hasEvolutionBonus('mantis_unlock')">Unlock Mantis - 35 EP</button>
+                                    <button onclick="game.purchaseEvolutionBonus('butterfly_unlock', 40)" data-bind="disable: evolutionPoints() < 40 || hasEvolutionBonus('butterfly_unlock')">Unlock Butterflies - 40 EP</button>
+                                    <button onclick="game.purchaseEvolutionBonus('hornet_unlock', 50)" data-bind="disable: evolutionPoints() < 50 || hasEvolutionBonus('hornet_unlock')">Unlock Hornets - 50 EP</button>
+                                </div>
+                            </div>
+                            <div data-bind="visible: evolutionBonuses().length > 0">
+                                <h4>Active Bonuses:</h4>
+                                <div data-bind="foreach: evolutionBonuses">
+                                    <div><span data-bind="text: name"></span>: Level <span data-bind="text: value"></span></div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div id="tabs-research" class="tab" style="display:none">
+                <table cellspacing="10">
+                    <tr>
+                        <td style="width: 100%; padding: 5px; vertical-align: top;">
+                            <h4>Research Tree - <span data-bind="text: researchPoints()"></span> Research Points</h4>
+                            <div data-bind="foreach: researchTree">
+                                <div style="margin: 10px 0; padding: 10px; border: 1px solid #ccc; background: #f9f9f9;" data-bind="css: { 'background-color': $parent.isResearched(id) ? '#d4edda' : unlocked ? '#fff3cd' : '#f8d7da' }">
+                                    <h5 data-bind="text: name"></h5>
+                                    <p data-bind="text: desc"></p>
+                                    <p>Cost: <span data-bind="text: cost"></span> RP | Category: <span data-bind="text: category"></span></p>
+                                    <button data-bind="click: function() { $parent.purchaseResearch(id) }, disable: !$parent.canResearch(id), visible: !$parent.isResearched(id), text: $parent.canResearch(id) ? 'Research' : 'Locked'"></button>
+                                    <span data-bind="visible: $parent.isResearched(id)" style="color: green; font-weight: bold;">RESEARCHED</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div id="tabs-resources" class="tab" style="display:none">
+                <table cellspacing="10">
+                    <tr>
+                        <td style="width: 100%; padding: 5px; vertical-align: top;">
+                            <h4>New Resources</h4>
+                            <div style="display: flex; flex-wrap: wrap; gap: 20px; margin: 20px 0;">
+                                <div data-bind="visible: nectar() > 0" style="padding: 10px; border: 1px solid #ffc107; background: #fff3cd;">
+                                    <h5>🍯 Nectar: <span data-bind="text: gameFormatNumber(nectar())"></span></h5>
+                                    <p>Produced by Butterflies. Used for advanced breeding.</p>
+                                </div>
+                                <div data-bind="visible: silk() > 0" style="padding: 10px; border: 1px solid #6c757d; background: #f8f9fa;">
+                                    <h5>🕸️ Silk: <span data-bind="text: gameFormatNumber(silk())"></span></h5>
+                                    <p>Produced by Spiders. Used for equipment upgrades.</p>
+                                </div>
+                                <div data-bind="visible: chitin() > 0" style="padding: 10px; border: 1px solid #dc3545; background: #f8d7da;">
+                                    <h5>🛡️ Chitin: <span data-bind="text: gameFormatNumber(chitin())"></span></h5>
+                                    <p>Collected from battles. Used for armor and weapons.</p>
+                                </div>
+                                <div data-bind="visible: pollen() > 0" style="padding: 10px; border: 1px solid #28a745; background: #d4edda;">
+                                    <h5>🌸 Pollen: <span data-bind="text: gameFormatNumber(pollen())"></span></h5>
+                                    <p>Generated from farms with research. Boosts grass production.</p>
+                                </div>
+                            </div>
+                            <div data-bind="visible: nectar() === 0 && silk() === 0 && chitin() === 0 && pollen() === 0">
+                                <p>New resources will appear here as you unlock different critter species and research technologies.</p>
+                                <ul>
+                                    <li><strong>Nectar:</strong> Produced by Butterflies</li>
+                                    <li><strong>Silk:</strong> Produced by Spiders</li>
+                                    <li><strong>Chitin:</strong> Collected from battles</li>
+                                    <li><strong>Pollen:</strong> Generated from farms with research</li>
+                                </ul>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
             <div id="tabs-information" class="tab" style="display:none">
                 <table cellspacing="10">
                     <tr>
@@ -786,6 +885,10 @@
                     <tr>
                         <td>Birth Order</td>
                         <td data-bind="text: id"></td>
+                    </tr>
+                    <tr data-bind="visible: species > 0">
+                        <td>Species</td>
+                        <td data-bind="text: speciesName"></td>
                     </tr>
                     <tr data-bind="visible: job === 3">
                         <td>Experience</td>
